[project]
name = "password-generator"
version = "0.1.0"
description = "Simple password administrator."
authors = [{ name = "salejandropc" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pre-commit (>=4.2.0,<5.0.0)",
    "ruff (>=0.11.2,<0.12.0)",
    "mypy (>=1.15.0,<2.0.0)",
]

[tool.poetry]
packages = [{ include = "password_generator", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
